git: updated README